--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./assets/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/theme.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/primeng.min.css" />
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading</app-root>
 </body>
 </html>
