--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/primeicons.css" />
   <link rel="stylesheet" type="text/css" href="./assets/theme.css" />
   <link rel="stylesheet" type="text/css" href="./assets/primeng.min.css" />
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
   <app-root>Loading</app-root>
